--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 60px auto;
     width: 70%;
@@ -25,6 +26,7 @@ h1 {
 }
 h2 {
     font-size: 1.5em;
+    line-height: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
@@ -33,11 +35,21 @@ p {
     color: #333;
     text-indent: 50px
 }
+p1{
+  font-size: 1em;
+  line-height: 1em;
+  color: #333;
+  font-family:'Helvetica', 'Arial', 'Sans-Serif'
+}
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
-
+ul {
+    columns: 2;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+}
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
